[package]
edition = "2018"
name = "toy-transactions-engine"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
rust_decimal = "1.19.0"
rust_decimal_macros = "1.19.0"
serde = {version = "1.0.133", features = ["derive"]}
tokio = {version = "1.15.0", features = ["full"]}

[dev-dependencies]
hamcrest = "*"
